# circuit-node-client

./: .env.example  .gitignore  GUIDE.md  README.md  SECURITY.md  gpu-node.js  join.ps1  join.sh  node-client.js  package-lock.json  package.json  worker.js
.github/workflows/: desktop-build.yml
config/: client.example.json
deploy/: circuit-node-client.service  generate-signing-key.js  publish-update.js
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/scripts/: build-sidecar.mjs
desktop/src/: app.css  app.js  index.html
desktop/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: DASHBOARD_SPEC.md  circuit-agent-dashboard-port.md
lib/: access.js  agent-cloud.js  agent.js  chat.js  circuit-agent.js  cpu-host.js  gpu-host.js  home.js  identity.js  llm-worker.js  registry.js  server.js  shard.js  stakepoint.js  sync.js  updater.js
lib/inference/: dequant.js  qwen2-worker.js
native/: Makefile  Makefile.cuda  circuit-runner.c
test/: home.test.js
ui/: dashboard.html
