[package]
name = "circuit-node-desktop"
version = "0.1.8"
description = "CIRCUIT Node — desktop app for the GPU inference mesh and CPU agent cloud"
authors = ["Circuit LLM <circuitllm@protonmail.com>"]
edition = "2021"
rust-version = "1.77"

# The library that main.rs calls into — also lets `tauri build` / mobile share one entry.
[lib]
name = "circuit_node_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# reqwest talks to the local sidecar from the Rust side, so the webview never makes a
# cross-origin request (no CORS wrangling with the node-client). rustls avoids a system
# OpenSSL dependency, keeping the cross-platform build simple.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }

[features]
# Default off; enabled when Tauri bundles the updater artifacts.
custom-protocol = ["tauri/custom-protocol"]

# Smaller, faster release binary for distribution.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
